write tests from grpc, now changes on AppEnvironment change logging from console to json
