# aibolit_app/api/schemas/schedules/generated.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.json
-#   timestamp: 2025-05-06T12:11:19+00:00
+#   timestamp: 2025-05-08T18:56:56+00:00
 
 from __future__ import annotations
 
@@ -20,7 +20,7 @@ class ScheduleCreate(BaseModel):
     intake_period: str = Field(
         ...,
         description='Период приёмов записывается в [cron синтаксисе](https://en.wikipedia.org/wiki/Cron#CRON_expression), пример 0 12 * * * - каждый день в ровно 12 часов дня. **W и # символы не поддерживаются**',
-        examples=['12'],
+        examples=['0 12 * * *'],
         title='Intake Period',
     )
     user_id: int = Field(..., title='User Id')
@@ -29,6 +29,7 @@ class ScheduleCreate(BaseModel):
         description='Конец лечения, null - если нет ограничения в длительности лечения',
         title='Intake Finish',
     )
+    intake_start: Optional[datetime] = Field('2025-05-08T18:53:08.620660Z', title='Intake Start')
 
 
 class ScheduleRead(BaseModel):
