# openapi.json
@@ -51,9 +51,15 @@
           "intake_period": {
             "description": "\u041f\u0435\u0440\u0438\u043e\u0434 \u043f\u0440\u0438\u0451\u043c\u043e\u0432 \u0437\u0430\u043f\u0438\u0441\u044b\u0432\u0430\u0435\u0442\u0441\u044f \u0432 [cron \u0441\u0438\u043d\u0442\u0430\u043a\u0441\u0438\u0441\u0435](https://en.wikipedia.org/wiki/Cron#CRON_expression), \u043f\u0440\u0438\u043c\u0435\u0440 0 12 * * * - \u043a\u0430\u0436\u0434\u044b\u0439 \u0434\u0435\u043d\u044c \u0432 \u0440\u043e\u0432\u043d\u043e 12 \u0447\u0430\u0441\u043e\u0432 \u0434\u043d\u044f. **W \u0438 # \u0441\u0438\u043c\u0432\u043e\u043b\u044b \u043d\u0435 \u043f\u043e\u0434\u0434\u0435\u0440\u0436\u0438\u0432\u0430\u044e\u0442\u0441\u044f**",
             "examples": [
-              "12"
+              "0 12 * * *"
             ],
             "title": "Intake Period",
+            "type": "string"
+          },
+          "intake_start": {
+            "default": "2025-05-08T18:53:08.620660Z",
+            "format": "date-time",
+            "title": "Intake Start",
             "type": "string"
           },
           "medicine_name": {
@@ -154,7 +160,7 @@
   "paths": {
     "/next_takings": {
       "get": {
-        "description": "\u0412\u043e\u0437\u0432\u0440\u0430\u0449\u0430\u0435\u0442 \u0434\u0430\u043d\u043d\u044b\u0435 \u043e \u0442\u0430\u0431\u043b\u0435\u0442\u043a\u0430\u0445, \u043a\u043e\u0442\u043e\u0440\u044b\u0435 \u043d\u0435\u043e\u0431\u0445\u043e\u0434\u0438\u043c\u043e \u043f\u0440\u0438\u043d\u044f\u0442\u044c  # noqa: RUF003\n\u0432 \u0431\u043b\u0438\u0436\u0430\u0439\u0448\u0438\u0435 \u043f\u0435\u0440\u0438\u043e\u0434 (\u043d\u0430\u043f\u0440\u0438\u043c\u0435\u0440, \u0432 \u0431\u043b\u0438\u0436\u0430\u0439\u0448\u0438\u0439 \u0447\u0430\u0441). \u041f\u0435\u0440\u0438\u043e\u0434\n\u0432\u0440\u0435\u043c\u0435\u043d\u0438 \u0437\u0430\u0434\u0430\u0435\u0442\u0441\u044f \u0447\u0435\u0440\u0435\u0437 \u043f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u044b \u043a\u043e\u043d\u0444\u0438\u0433\u0443\u0440\u0430\u0446\u0438\u0438 \u0441\u0435\u0440\u0432\u0438\u0441\u0430",
+        "description": "\u0412\u043e\u0437\u0432\u0440\u0430\u0449\u0430\u0435\u0442 \u0434\u0430\u043d\u043d\u044b\u0435 \u043e \u0442\u0430\u0431\u043b\u0435\u0442\u043a\u0430\u0445, \u043a\u043e\u0442\u043e\u0440\u044b\u0435 \u043d\u0435\u043e\u0431\u0445\u043e\u0434\u0438\u043c\u043e \u043f\u0440\u0438\u043d\u044f\u0442\u044c\n\u0432 \u0431\u043b\u0438\u0436\u0430\u0439\u0448\u0438\u0435 \u043f\u0435\u0440\u0438\u043e\u0434 (\u043d\u0430\u043f\u0440\u0438\u043c\u0435\u0440, \u0432 \u0431\u043b\u0438\u0436\u0430\u0439\u0448\u0438\u0439 \u0447\u0430\u0441). \u041f\u0435\u0440\u0438\u043e\u0434\n\u0432\u0440\u0435\u043c\u0435\u043d\u0438 \u0437\u0430\u0434\u0430\u0435\u0442\u0441\u044f \u0447\u0435\u0440\u0435\u0437 \u043f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u044b \u043a\u043e\u043d\u0444\u0438\u0433\u0443\u0440\u0430\u0446\u0438\u0438 \u0441\u0435\u0440\u0432\u0438\u0441\u0430",
         "operationId": "next_takings_next_takings_get",
         "parameters": [
           {
@@ -181,6 +187,23 @@
                 }
               ],
               "title": "X-Trace-Id"
+            }
+          },
+          {
+            "in": "header",
+            "name": "X-Request-Id",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "format": "uuid",
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "X-Request-Id"
             }
           }
         ],
@@ -255,6 +278,23 @@
               ],
               "title": "X-Trace-Id"
             }
+          },
+          {
+            "in": "header",
+            "name": "X-Request-Id",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "format": "uuid",
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "X-Request-Id"
+            }
           }
         ],
         "responses": {
@@ -315,6 +355,23 @@
               ],
               "title": "X-Trace-Id"
             }
+          },
+          {
+            "in": "header",
+            "name": "X-Request-Id",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "format": "uuid",
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "X-Request-Id"
+            }
           }
         ],
         "requestBody": {
@@ -357,7 +414,7 @@
     },
     "/schedules": {
       "get": {
-        "description": "\u0412\u043e\u0437\u0432\u0440\u0430\u0449\u0430\u0435\u0442 \u0434\u0430\u043d\u043d\u044b\u0435 \u043e \u0432\u044b\u0431\u0440\u0430\u043d\u043d\u043e\u043c \u0440\u0430\u0441\u043f\u0438\u0441\u0430\u043d\u0438\u0438 \u0441 \u0440\u0430\u0441\u0441\u0447\u0438\u0442\u0430\u043d\u043d\u044b\u043c  # noqa: RUF003\n\u0433\u0440\u0430\u0444\u0438\u043a\u043e\u043c \u043f\u0440\u0438\u0451\u043c\u043e\u0432 \u043d\u0430 \u0434\u0435\u043d\u044c",
+        "description": "\u0412\u043e\u0437\u0432\u0440\u0430\u0449\u0430\u0435\u0442 \u0434\u0430\u043d\u043d\u044b\u0435 \u043e \u0432\u044b\u0431\u0440\u0430\u043d\u043d\u043e\u043c \u0440\u0430\u0441\u043f\u0438\u0441\u0430\u043d\u0438\u0438 \u0441 \u0440\u0430\u0441\u0441\u0447\u0438\u0442\u0430\u043d\u043d\u044b\u043c\n\u0433\u0440\u0430\u0444\u0438\u043a\u043e\u043c \u043f\u0440\u0438\u0451\u043c\u043e\u0432 \u043d\u0430 \u0434\u0435\u043d\u044c",
         "operationId": "schedules_schedules_get",
         "parameters": [
           {
@@ -384,6 +441,23 @@
                 }
               ],
               "title": "X-Trace-Id"
+            }
+          },
+          {
+            "in": "header",
+            "name": "X-Request-Id",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "format": "uuid",
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "X-Request-Id"
             }
           }
         ],
